crates/gridwell-writer-quarto/tests/snapshots/snapshots__align-left-center-right.snap
---
source: crates/gridwell-writer-quarto/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [
        "quarto-table",
        "cell-output-display"
      ],
      []
    ],
    [
      {
        "c": [
          [
            "",
            [],
            []
          ],
          [
            null,
            []
          ],
          [
            [
              {
                "t": "AlignLeft"
              },
              {
                "t": "ColWidthDefault"
              }
            ],
            [
              {
                "t": "AlignCenter"
              },
              {
                "t": "ColWidthDefault"
              }
            ],
            [
              {
                "t": "AlignRight"
              },
              {
                "t": "ColWidthDefault"
              }
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                [
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Left",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ],
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Center",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ],
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Right",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ]
                ]
              ]
            ]
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              0,
              [],
              [
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "aaa",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "bbb",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "ccc",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ],
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "d",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "e",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "f",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            []
          ]
        ],
        "t": "Table"
      }
    ]
  ],
  "t": "Div"
}
